# matrix.io

./: .gitignore
.claude/: CLAUDE.md
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml  build.rs
shared/schema/: protocol.capnp
shared/src/: lib.rs
web/: index.html
