[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
capnp = "0.20"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "KeyboardEvent",
    "EventTarget",
    "Performance",
    "CssStyleDeclaration",
    "HtmlElement",
    "Event",
    "Location",
    "console",
    "TouchEvent",
    "TouchList",
    "Touch",
    "WheelEvent",
    "MouseEvent",
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "HtmlImageElement",
    "Storage",
    "CanvasPattern",
    "ImageBitmap",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
